# src/main/java/io/prozy/myfinance/dto/LoginResponseDto.java
@@ -1,13 +1,6 @@
 package io.prozy.myfinance.dto;
 
-import lombok.Data;
-import lombok.AllArgsConstructor;
-import lombok.NoArgsConstructor;
-
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-public class LoginResponseDto {
-  private String token;
-  private String uuid;
-}
+public record LoginResponseDto(
+        String token,
+        String uuid
+) {}
