# src/main/java/io/prozy/myfinance/dto/RegisterRequestDto.java
@@ -1,32 +1,24 @@
 package io.prozy.myfinance.dto;
 
-import lombok.Data;
-import lombok.NoArgsConstructor;
-import lombok.AllArgsConstructor;
-
 import jakarta.validation.constraints.*;
 
-@Data
-@NoArgsConstructor
-@AllArgsConstructor
-public class RegisterRequestDto {
+public record RegisterRequestDto(
+        @NotBlank(message = "Login is required")
+        @Size(min = 4, max = 50, message = "Login must be between 4 and 50 characters")
+        String login,
 
-  @NotBlank(message = "Login is required")
-  @Size(min = 4, max = 50, message = "Login must be between 4 and 50 characters")
-  private String login;
+        @NotBlank(message = "Password is required")
+        @Size(min = 6, max = 100, message = "Password must be between 6 and 100 characters")
+        @Pattern(regexp = "^[^_]*$", message = "Password shouldn't contain '_'")
+        String password,
 
-  @NotBlank(message = "Password is required")
-  @Size(min = 6, max = 100, message = "Password must be between 6 and 100 characters")
-  @Pattern(regexp = "^[^_]*$", message = "Password shouldn't contain '_'")
-  private String password;
+        @Size(max = 100, message = "First name must be at most 100 characters")
+        String firstName,
 
-  @Size(max = 100, message = "First name must be at most 100 characters")
-  private String firstName;
+        @Size(max = 100, message = "Last name must be at most 100 characters")
+        String lastName,
 
-  @Size(max = 100, message = "Last name must be at most 100 characters")
-  private String lastName;
-
-  @Email(message = "Invalid email format")
-  @Size(max = 100, message = "Email must be at most 100 characters")
-  private String email;
-}
+        @Email(message = "Invalid email format")
+        @Size(max = 100, message = "Email must be at most 100 characters")
+        String email
+) {}
